--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,13 @@
-<h1>My Tasks</h1>
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_path(task) %></li>
-  <% end %>
-</ul>
 
-<%= link_to "Add a new Task", new_task_path %>
+<div class="container">
+  <h1 class="my-4">Task List</h1>
+  <ul class="list-group">
+    <% @tasks.each do |task| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= link_to task.title, task_path(task) %>
+      </li>
+    <% end %>
+  </ul>
+
+  <%= link_to "Add a new Task", new_task_path, class: 'btn btn-primary' %>
+</div>
