--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,9 +1,12 @@
-<h2><%= @task.title %></h2>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
-<%= link_to 'Back to list', tasks_path %>
-<%= link_to "Edit", edit_task_path %>
-<%= link_to "Delete",
-  task_path(@task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-%>
+<div class="container">
+  <h1 class="my-4"><%= @task.title %></h1>
+  <p><%= @task.details %></p>
+  <p><%= @task.completed %></p>
+  <%= link_to 'Back to list', tasks_path, class: 'btn btn-primary' %>
+  <%= link_to "Edit", edit_task_path, class: 'btn btn-primary' %>
+  <%= link_to "Delete",
+    task_path(@task),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-primary'
+  %>
+  <i class="fa-solid fa-trash-can"></i>
+</div>
